--- a/cypress/support/component-index.html
+++ b/cypress/support/component-index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Components App</title>
-  </head>
-  <body>
-    <div data-cy-root></div>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Components App</title>
+  <script>
+    if (window.parent !== window) {
+      window["__REACT_DEVTOOLS_GLOBAL_HOOK__"] =
+        window.parent["__REACT_DEVTOOLS_GLOBAL_HOOK__"];
+    }
+  </script>
+</head>
+
+<body>
+  <div data-cy-root></div>
+</body>
+
 </html>
